--- a/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Quiz" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,65 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hC-A2-tS5">
+                                <rect key="frame" x="175" y="85" width="25" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCK-3Y-fwF">
+                                <rect key="frame" x="175" y="264" width="25" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9dW-U5-c9n">
+                                <rect key="frame" x="138" y="114" width="98" height="30"/>
+                                <state key="normal" title="Next Question"/>
+                                <connections>
+                                    <action selector="showNextQuestion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aly-ju-4fJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYQ-CT-lOs">
+                                <rect key="frame" x="141" y="293" width="93" height="30"/>
+                                <state key="normal" title="Show Answer"/>
+                                <connections>
+                                    <action selector="showAnswer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Znk-s0-AVM"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YLp-H0-Fe8">
+                                <rect key="frame" x="167" y="85" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="YLp-H0-Fe8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9Ff-Aj-q4A"/>
+                            <constraint firstItem="6hC-A2-tS5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EiR-Ea-IQd"/>
+                            <constraint firstItem="9dW-U5-c9n" firstAttribute="top" secondItem="6hC-A2-tS5" secondAttribute="bottom" constant="8" id="JGv-dx-13l"/>
+                            <constraint firstItem="9dW-U5-c9n" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QIE-NC-IzH"/>
+                            <constraint firstItem="YLp-H0-Fe8" firstAttribute="baseline" secondItem="6hC-A2-tS5" secondAttribute="baseline" id="Qwy-CG-ryh"/>
+                            <constraint firstItem="zCK-3Y-fwF" firstAttribute="top" secondItem="9dW-U5-c9n" secondAttribute="bottom" constant="120" id="Yuu-a1-8tC"/>
+                            <constraint firstItem="RYQ-CT-lOs" firstAttribute="centerX" secondItem="9dW-U5-c9n" secondAttribute="centerX" id="h5E-Au-mdc"/>
+                            <constraint firstItem="6hC-A2-tS5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="65" id="lbQ-V1-fIf"/>
+                            <constraint firstItem="RYQ-CT-lOs" firstAttribute="top" secondItem="zCK-3Y-fwF" secondAttribute="bottom" constant="8" id="pmr-M8-irn"/>
+                            <constraint firstItem="zCK-3Y-fwF" firstAttribute="centerX" secondItem="9dW-U5-c9n" secondAttribute="centerX" id="reQ-f1-3Zh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="answerLabel" destination="zCK-3Y-fwF" id="rrD-q2-kbY"/>
+                        <outlet property="currentQuestionLabel" destination="6hC-A2-tS5" id="9Tu-bp-wK4"/>
+                        <outlet property="currentQuestionLabelCenterXConstraint" destination="EiR-Ea-IQd" id="bYo-tp-opW"/>
+                        <outlet property="nextQuestionLabel" destination="YLp-H0-Fe8" id="5Fg-AW-eqH"/>
+                        <outlet property="nextQuestionLabelCenterXConstraint" destination="9Ff-Aj-q4A" id="8yb-Uy-8XZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
